@@ -19,6 +19,7 @@ import com.simibubi.create.content.logistics.trains.TrackNodeLocation;
 import com.simibubi.create.content.logistics.trains.entity.TravellingPoint.ITrackSelector;
 import com.simibubi.create.content.logistics.trains.management.GlobalStation;
 import com.simibubi.create.foundation.utility.Couple;
+import com.simibubi.create.foundation.utility.Iterate;
 import com.simibubi.create.foundation.utility.Pair;
 
 import net.minecraft.world.level.Level;
@@ -29,6 +30,7 @@ public class Navigation {
 	Train train;
 	public GlobalStation destination;
 	public double distanceToDestination;
+	public boolean destinationBehindTrain;
 	List<TrackEdge> currentPath;
 
 	public Navigation(Train train, TrackGraph graph) {
@@ -39,6 +41,27 @@ public class Navigation {
 	public void tick(Level level) {
 		if (destination == null)
 			return;
+
+		if (!train.runtime.paused) {
+			boolean frontDriver = train.hasForwardConductor();
+			boolean backDriver = train.hasBackwardConductor();
+			if (destinationBehindTrain && !backDriver) {
+				if (frontDriver)
+					train.status.missingBackwardsConductor();
+				else
+					train.status.missingConductor();
+				cancelNavigation();
+				return;
+			}
+
+			if (!destinationBehindTrain && !frontDriver) {
+				train.status.missingConductor();
+				cancelNavigation();
+				return;
+			}
+
+			train.status.foundConductor();
+		}
 
 		destination.reserveFor(train);
 
@@ -51,21 +74,24 @@ public class Navigation {
 			return;
 		}
 
-		if (distanceToDestination - train.speed < 1 / 32f) {
-			train.speed = distanceToDestination;
+		float speedMod = destinationBehindTrain ? -1 : 1;
+		train.currentlyBackwards = destinationBehindTrain;
+
+		if (distanceToDestination - Math.abs(train.speed) < 1 / 32f) {
+			train.speed = distanceToDestination * speedMod;
 			return;
 		}
 
 		if (distanceToDestination < 10) {
 			double target = Train.topSpeed * ((distanceToDestination) / 10);
-			if (target < train.speed) {
-				train.speed += (target - train.speed) * .5f;
+			if (target < Math.abs(train.speed)) {
+				train.speed += (target - Math.abs(train.speed)) * .5f * speedMod;
 				return;
 			}
 		}
 
 		double brakingDistance = (train.speed * train.speed) / (2 * Train.acceleration);
-		train.targetSpeed = distanceToDestination > brakingDistance ? Train.topSpeed : 0;
+		train.targetSpeed = distanceToDestination > brakingDistance ? Train.topSpeed * speedMod : 0;
 		train.approachTargetSpeed(1);
 	}
 
@@ -103,13 +129,17 @@ public class Navigation {
 
 	public double startNavigation(GlobalStation destination, boolean simulate) {
 		Pair<Double, List<TrackEdge>> pathTo = findPathTo(destination);
+		boolean noneFound = pathTo.getFirst() == null;
+		double distance = noneFound ? -1 : Math.abs(pathTo.getFirst());
 
 		if (simulate)
-			return pathTo.getFirst();
+			return distance;
 
-		distanceToDestination = pathTo.getFirst();
+		distanceToDestination = distance;
 		currentPath = pathTo.getSecond();
-		if (distanceToDestination == -1) {
+		destinationBehindTrain = pathTo.getFirst() < 0;
+
+		if (noneFound) {
 			distanceToDestination = 0;
 			if (this.destination != null)
 				cancelNavigation();
@@ -118,6 +148,28 @@ public class Navigation {
 
 		if (this.destination == destination)
 			return 0;
+		
+		if (!train.runtime.paused) {
+			boolean frontDriver = train.hasForwardConductor();
+			boolean backDriver = train.hasBackwardConductor();
+			if (destinationBehindTrain && !backDriver) {
+				if (frontDriver)
+					train.status.missingBackwardsConductor();
+				else
+					train.status.missingConductor();
+				return -1;
+			}
+
+			if (!destinationBehindTrain && !frontDriver) {
+				if (backDriver)
+					train.status.missingBackwardsConductor();
+				else
+					train.status.missingConductor();
+				return -1;
+			}
+
+			train.status.foundConductor();
+		}
 
 		train.leaveStation();
 		this.destination = destination;
@@ -129,49 +181,85 @@ public class Navigation {
 		List<TrackEdge> path = new ArrayList<>();
 
 		if (graph == null)
-			return Pair.of(-1d, path);
+			return Pair.of(null, path);
 
 		Couple<TrackNodeLocation> target = destination.edgeLocation;
-		TravellingPoint leadingPoint = train.carriages.get(0)
-			.getLeadingPoint();
-		TrackEdge initialEdge = leadingPoint.edge;
+		MutableObject<Pair<Double, List<TrackEdge>>> frontResult = new MutableObject<>(Pair.of(null, path));
+		MutableObject<Pair<Double, List<TrackEdge>>> backResult = new MutableObject<>(Pair.of(null, path));
 
-		MutableObject<Pair<Double, List<TrackEdge>>> result = new MutableObject<>(Pair.of(-1d, path));
+		for (boolean forward : Iterate.trueAndFalse) {
+			if (this.destination == destination && destinationBehindTrain == forward)
+				continue;
 
-		search((reachedVia, poll) -> {
-			double distance = poll.getFirst();
-			Pair<Couple<TrackNode>, TrackEdge> currentEntry = poll.getSecond();
-			TrackEdge edge = currentEntry.getSecond();
-			TrackNode node1 = currentEntry.getFirst()
-				.getFirst();
-			TrackNode node2 = currentEntry.getFirst()
-				.getSecond();
+			List<TrackEdge> currentPath = new ArrayList<>();
+			TravellingPoint initialPoint = forward ? train.carriages.get(0)
+				.getLeadingPoint()
+				: train.carriages.get(train.carriages.size() - 1)
+					.getTrailingPoint();
+			TrackEdge initialEdge = forward ? initialPoint.edge
+				: graph.getConnectionsFrom(initialPoint.node2)
+					.get(initialPoint.node1);
 
-			TrackNodeLocation loc1 = node1.getLocation();
-			TrackNodeLocation loc2 = node2.getLocation();
-			if (!loc1.equals(target.getFirst()) || !loc2.equals(target.getSecond()))
-				return false;
+			search(Double.MAX_VALUE, forward, (reachedVia, poll) -> {
 
-			Pair<Boolean, TrackEdge> backTrack = reachedVia.get(edge);
-			TrackEdge toReach = edge;
-			while (backTrack != null && toReach != initialEdge) {
-				if (backTrack.getFirst())
-					path.add(0, toReach);
-				toReach = backTrack.getSecond();
-				backTrack = reachedVia.get(backTrack.getSecond());
-			}
+				double distance = poll.getFirst();
+				Pair<Couple<TrackNode>, TrackEdge> currentEntry = poll.getSecond();
+				TrackEdge edge = currentEntry.getSecond();
+				TrackNode node1 = currentEntry.getFirst()
+					.getFirst();
+				TrackNode node2 = currentEntry.getFirst()
+					.getSecond();
 
-			double distanceToDestination = distance;
-			double position = edge.getLength(node1, node2) - destination.position;
-			distanceToDestination -= position;
-			result.setValue(Pair.of(distanceToDestination, path));
-			return true;
-		}, Double.MAX_VALUE);
+				TrackNodeLocation loc1 = node1.getLocation();
+				TrackNodeLocation loc2 = node2.getLocation();
+				if (!loc1.equals(target.getFirst()) || !loc2.equals(target.getSecond()))
+					return false;
 
-		return result.getValue();
+				Pair<Boolean, TrackEdge> backTrack = reachedVia.get(edge);
+				TrackEdge toReach = edge;
+				while (backTrack != null && toReach != initialEdge) {
+					if (backTrack.getFirst())
+						currentPath.add(0, toReach);
+					toReach = backTrack.getSecond();
+					backTrack = reachedVia.get(backTrack.getSecond());
+				}
+
+				double position = edge.getLength(node1, node2) - destination.position;
+				double distanceToDestination = distance - position;
+
+				if (forward)
+					frontResult.setValue(Pair.of(distanceToDestination, currentPath));
+				else
+					backResult.setValue(Pair.of(-distanceToDestination, currentPath));
+				return true;
+			});
+
+			if (!train.doubleEnded)
+				break;
+		}
+
+		Pair<Double, List<TrackEdge>> front = frontResult.getValue();
+		Pair<Double, List<TrackEdge>> back = backResult.getValue();
+
+		boolean frontEmpty = front.getFirst() == null;
+		boolean backEmpty = back.getFirst() == null;
+		if (backEmpty)
+			return front;
+		if (frontEmpty)
+			return back;
+
+		boolean canDriveForward = train.hasForwardConductor() || train.runtime.paused;
+		boolean canDriveBackward = train.hasBackwardConductor() || train.runtime.paused;
+		if (!canDriveBackward)
+			return front;
+		if (!canDriveForward)
+			return back;
+
+		boolean frontBetter = -back.getFirst() > front.getFirst();
+		return frontBetter ? front : back;
 	}
 
-	public GlobalStation findNearestApproachable() {
+	public GlobalStation findNearestApproachable(boolean forward) {
 		TrackGraph graph = train.graph;
 		if (graph == null)
 			return null;
@@ -180,7 +268,7 @@ public class Navigation {
 		double minDistance = .75f * (train.speed * train.speed) / (2 * Train.acceleration);
 		double maxDistance = Math.max(32, 1.5f * (train.speed * train.speed) / (2 * Train.acceleration));
 
-		search((reachedVia, poll) -> {
+		search(maxDistance, forward, (reachedVia, poll) -> {
 			double distance = poll.getFirst();
 			if (distance < minDistance)
 				return false;
@@ -206,29 +294,34 @@ public class Navigation {
 			}
 
 			return false;
-		}, maxDistance);
+		});
 
 		return result.getValue();
 	}
 
-	public void search(
-		BiPredicate<Map<TrackEdge, Pair<Boolean, TrackEdge>>, Pair<Double, Pair<Couple<TrackNode>, TrackEdge>>> condition,
-		double maxDistance) {
+	public void search(double maxDistance, boolean forward,
+		BiPredicate<Map<TrackEdge, Pair<Boolean, TrackEdge>>, Pair<Double, Pair<Couple<TrackNode>, TrackEdge>>> condition) {
 		TrackGraph graph = train.graph;
 		if (graph == null)
 			return;
 
-		TravellingPoint leadingPoint = train.carriages.get(0)
-			.getLeadingPoint();
+		TravellingPoint startingPoint = forward ? train.carriages.get(0)
+			.getLeadingPoint()
+			: train.carriages.get(train.carriages.size() - 1)
+				.getTrailingPoint();
+
 		Set<TrackEdge> visited = new HashSet<>();
 		Map<TrackEdge, Pair<Boolean, TrackEdge>> reachedVia = new IdentityHashMap<>();
 		PriorityQueue<Pair<Double, Pair<Couple<TrackNode>, TrackEdge>>> frontier =
 			new PriorityQueue<>((p1, p2) -> Double.compare(p1.getFirst(), p2.getFirst()));
 
-		TrackEdge initialEdge = leadingPoint.edge;
-		TrackNode initialNode1 = leadingPoint.node1;
-		TrackNode initialNode2 = leadingPoint.node2;
-		double distanceToNode2 = initialEdge.getLength(initialNode1, initialNode2) - leadingPoint.position;
+		TrackNode initialNode1 = forward ? startingPoint.node1 : startingPoint.node2;
+		TrackNode initialNode2 = forward ? startingPoint.node2 : startingPoint.node1;
+		TrackEdge initialEdge = graph.getConnectionsFrom(initialNode1)
+			.get(initialNode2);
+		double distanceToNode2 = forward ? initialEdge.getLength(initialNode1, initialNode2) - startingPoint.position
+			: startingPoint.position;
+
 		frontier.add(Pair.of(distanceToNode2, Pair.of(Couple.create(initialNode1, initialNode2), initialEdge)));
 
 		while (!frontier.isEmpty()) {
